PROJECT(DOCUMENTATION)

IF(DOXYGEN_FOUND)

IF(DOXYGEN_DOT_FOUNT)
  SET(DOCUMENTATION_HAVE_DOT YES)
ENDIF(DOXYGEN_DOT_FOUNT)

## Developer documentation
CONFIGURE_FILE(
  ${DOCUMENTATION_SOURCE_DIR}/Developer.in ${DOCUMENTATION_BINARY_DIR}/Developer.doxygen
)

ADD_CUSTOM_TARGET(developer-doc 
  COMMAND ${DOXYGEN_EXECUTABLE} 
  ${DOCUMENTATION_BINARY_DIR}/Developer.doxygen
)

## SDK documentation
CONFIGURE_FILE(
  ${DOCUMENTATION_SOURCE_DIR}/SDK.in ${DOCUMENTATION_BINARY_DIR}/SDK.doxygen
)

ADD_CUSTOM_TARGET(sdk-doc ALL
  COMMAND ${DOXYGEN_EXECUTABLE} 
  ${DOCUMENTATION_BINARY_DIR}/SDK.doxygen
)

## SDK documentation
CONFIGURE_FILE(
  ${DOCUMENTATION_SOURCE_DIR}/Lua.in ${DOCUMENTATION_BINARY_DIR}/Lua.doxygen
)

ADD_CUSTOM_TARGET(lua-api-doc ALL
  COMMAND ${DOXYGEN_EXECUTABLE}
  ${DOCUMENTATION_BINARY_DIR}/Lua.doxygen
)

INSTALL(DIRECTORY ${DOCUMENTATION_BINARY_DIR}/SDK/html DESTINATION ${MARATIS_INSTALL_DIR}/SDK/doc)

ENDIF(DOXYGEN_FOUND)
