PROJECT(DOCUMENTATION)

IF(DOXYGEN_FOUND AND NOT NO_DOCUMENTATION)

IF(DOXYGEN_DOT_FOUND)
  SET(DOCUMENTATION_HAVE_DOT YES)
ENDIF(DOXYGEN_DOT_FOUND)

## Developer documentation
CONFIGURE_FILE(
  ${DOCUMENTATION_SOURCE_DIR}/Developer.in ${DOCUMENTATION_BINARY_DIR}/Developer.doxygen
)

ADD_CUSTOM_TARGET(developer-doc ALL
  COMMAND ${DOXYGEN_EXECUTABLE} 
  ${DOCUMENTATION_BINARY_DIR}/Developer.doxygen
)

## SDK documentation
#CONFIGURE_FILE(
#  ${DOCUMENTATION_SOURCE_DIR}/SDK.in ${DOCUMENTATION_BINARY_DIR}/SDK.doxygen
#)

#ADD_CUSTOM_TARGET(sdk-doc ALL
#  COMMAND ${DOXYGEN_EXECUTABLE} 
#  ${DOCUMENTATION_BINARY_DIR}/SDK.doxygen
#)

## SDK documentation
#CONFIGURE_FILE(
#  ${DOCUMENTATION_SOURCE_DIR}/Lua.in ${DOCUMENTATION_BINARY_DIR}/Lua.doxygen
#)

#ADD_CUSTOM_TARGET(lua-api-doc ALL
#  COMMAND ${DOXYGEN_EXECUTABLE}
#  ${DOCUMENTATION_BINARY_DIR}/Lua.doxygen
#)

INSTALL(DIRECTORY ${DOCUMENTATION_BINARY_DIR}/Developer/html

  DESTINATION ${NEO_INSTALL_DIR}/docs/
  COMPONENT documentation
  
  PATTERN "*.md5" EXCLUDE
  PATTERN "*.map" EXCLUDE)

ENDIF()
