
IF(${DISABLE_PIC_EXECUTABLES})
STRING(REPLACE "-fPIC" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
STRING(REPLACE "-fPIC" ""  CMAKE_C_FLAGS ${CMAKE_C_FLAGS})
ENDIF()

ADD_SUBDIRECTORY(Common)

IF(ANDROID)
ADD_SUBDIRECTORY(AndroidPlayer)
ENDIF()

IF(EMSCRIPTEN)
ADD_SUBDIRECTORY(EmscriptenPlayer)
ENDIF()

IF(NOT ANDROID AND NOT EMSCRIPTEN)
ADD_SUBDIRECTORY(Editor)
ADD_SUBDIRECTORY(NeoEditor)
ADD_SUBDIRECTORY(CrashHandler)
ADD_SUBDIRECTORY(Player)
ENDIF()

IF(${DISABLE_PIC_EXECUTABLES})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
ENDIF()

