
# IF(${DISABLE_PIC_EXECUTABLES} AND NOT ${CMAKE_CXX_FLAGS} STREQUAL "" AND NOT ${CMAKE_C_FLAGS} STREQUAL "")
STRING(REPLACE "-fPIC" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
STRING(REPLACE "-fPIC" ""  CMAKE_C_FLAGS ${CMAKE_C_FLAGS})
# ENDIF()

ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(Editor)

IF(ANDROID)
ADD_SUBDIRECTORY(Player)
ENDIF()

IF(EMSCRIPTEN)
ADD_SUBDIRECTORY(EmscriptenPlayer)
ENDIF()

IF(NOT ANDROID AND NOT EMSCRIPTEN)
#ADD_SUBDIRECTORY(NeoEditor)
ADD_SUBDIRECTORY(Player)
#ADD_SUBDIRECTORY(LuaCommonDlg)
ENDIF()

IF(${DISABLE_PIC_EXECUTABLES})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
ENDIF()

