## Find source and headers
FILE(GLOB_RECURSE HEADERS *.h*)
FILE(GLOB_RECURSE SOURCES *.c*)
 
IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build
INCLUDE_DIRECTORIES(
  ${MCORE_INCLUDE_DIR}
)

IF(ANDROID)
  ADD_DEFINITIONS(-DGL_GLEXT_PROTOTYPES)
ENDIF(ANDROID)

ADD_LIBRARY(MaratisOpenGLES ${SOURCES} ${HEADERS})