## Find source and headers
FILE(GLOB_RECURSE HEADERS *.h*)
FILE(GLOB_RECURSE SOURCES *.c* *.mm)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build
INCLUDE_DIRECTORIES(
  ## Maratis include directories
  ${MARATIS_COMMON_INCLUDE_DIR}
  ${MARATIS_OPENGLES_INCLUDE_DIR}
  ${MARATIS_WAVSOUND_INCLUDE_DIR}
  ${MCORE_INCLUDE_DIR}
  ${MENGINE_INCLUDE_DIR}
  ${MGUI_INCLUDE_DIR}

  ## 3rdparty include directories
  ${BULLET_INCLUDE_DIR}
  ${FREETYPE_INCLUDE_DIR}
  ${LUA_INCLUDE_DIR}
  ${NPK_INCLUDE_DIR}
  ${TINYXML_INCLUDE_DIR}
)

ADD_EXECUTABLE(MaratisApp ${SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(MaratisApp
  ## Maratis libraries
  ${MARATIS_COMMON_LIBRARIES}
  ${MARATIS_OPENGLES_LIBRARIES}
  ${MARATIS_WAVSOUND_LIBRARIES}
  ${MCORE_LIBRARIES}
  ${MENGINE_LIBRARIES}
  ${MGUI_LIBRARIES}

  ## 3rdparty libraries
  ${BULLET_LIBRARIES}
  ${FREETYPE_LIBRARIES}
  ${LUA_LIBRARIES}
  ${NPK_LIBRARIES}
  ${TINYXML_LIBRARIES}
  ${OPENAL_LIBRARIES}
  ${ZLIB_LIBRARIES}

  ## System libraries
  ${OPENGL_LIBRARIES}
  ${PLATFORM_LIBRARIES}
)
