## Find source and headers
FILE(GLOB HEADERS Includes/*.h)
FILE(GLOB SOURCES Sources/*.c*)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build
INCLUDE_DIRECTORIES(
  ${MCORE_INCLUDE_DIR} ${DIRENT_INCLUDE_DIR} ${SDL_INCLUDE_DIR}
)

SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}")
ADD_DEFINITIONS(-DMCORE_DLL)

IF(NOT ANDROID AND NOT EMSCRIPTEN)
ADD_LIBRARY(MCore SHARED ${SOURCES} ${HEADERS})
ELSE()
ADD_LIBRARY(MCore STATIC ${SOURCES} ${HEADERS})
ENDIF()

TARGET_LINK_LIBRARIES(MCore ${SDL_LIBS} ${SDL_LIBRARIES})

## Install for Editor
INSTALL(TARGETS MCore DESTINATION ${MARATIS_INSTALL_DIR})

## Install for SDK
INSTALL(TARGETS MCore DESTINATION ${MARATIS_INSTALL_DIR}/SDK/lib)
INSTALL(FILES ${HEADERS} DESTINATION ${MARATIS_INSTALL_DIR}/SDK/include/MCore)
