## Find source and headers
FILE(GLOB HEADERS Includes/*.h)
FILE(GLOB SOURCES Sources/*.c*)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build
INCLUDE_DIRECTORIES(
  ${MCORE_INCLUDE_DIR}
  ${MENGINE_INCLUDE_DIR}
)

ADD_LIBRARY(MEngine SHARED ${SOURCES})

TARGET_LINK_LIBRARIES(MEngine ${MCORE_LIBRARIES})

## Install for Editor
INSTALL(TARGETS MEngine DESTINATION ${MARATIS_INSTALL_DIR})

## Install for SDK
INSTALL(TARGETS MEngine DESTINATION ${MARATIS_INSTALL_DIR}/SDK/lib)
INSTALL(FILES ${HEADERS} DESTINATION ${MARATIS_INSTALL_DIR}/SDK/include/MEngine)