## Find source and headers
FILE(GLOB HEADERS Includes/*.h)
FILE(GLOB SOURCES Sources/*.c*)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build
INCLUDE_DIRECTORIES(
  ${MCORE_INCLUDE_DIR}
  ${MGUI_INCLUDE_DIR}
  ${MARATIS_COMMON_INCLUDE_DIR}
  ${SDL_INCLUDE_DIR}
)

IF(UNIX AND NOT APPLE)
  FILE(GLOB PLATFORM_SOURCES Sources/X11/*.cpp)
ENDIF(UNIX AND NOT APPLE)

IF(APPLE)
  FILE(GLOB PLATFORM_SOURCES Sources/COCOA/*.m)
ENDIF(APPLE)

IF(WIN32)
  FILE(GLOB PLATFORM_SOURCES Sources/WIN32/*.cpp)
ENDIF(WIN32)

SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}")

ADD_LIBRARY(MGui STATIC ${SOURCES} ${PLATFORM_SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(MGui ${MCORE_LIBRARIES} ${MENGINE_LIBRARIES} ${SDL_LIBRARIES})

## Install for Editor
INSTALL(TARGETS MGui DESTINATION ${MARATIS_INSTALL_DIR})

## Install for SDK
INSTALL(TARGETS MGui DESTINATION ${MARATIS_INSTALL_DIR}/SDK/lib)
INSTALL(FILES ${HEADERS} DESTINATION ${MARATIS_INSTALL_DIR}/SDK/include/MGui)
