## Find source and headers
FILE(GLOB_RECURSE HEADERS *.h)
# TODO: Need to include *.m* files for MAC!!!
FILE(GLOB_RECURSE SOURCES *.c*)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

ADD_SUBDIRECTORY(Plugins)
ADD_SUBDIRECTORY(Translations)

IF(WIN32)
  LIST(APPEND SOURCES "icon.rc")
  SET(NEO_IMAGEHELP "imagehlp")
ENDIF(WIN32)

## Build
ADD_DEFINITIONS(-DM_PACKAGE_WRITABLE)
ADD_DEFINITIONS(-DEDITOR_VERSION_STRING=${NEO_VERSION_STRING})

INCLUDE_DIRECTORIES(
  ## Maratis include directories
  ${MARATIS_COMMON_INCLUDE_DIR}
  ${MCORE_INCLUDE_DIR}
  ${MENGINE_INCLUDE_DIR}

  ## 3rdparty include directories
  ${ASSIMP_INCLUDE_DIR}
  ${BULLET_INCLUDE_DIR}
  ${FREETYPE_INCLUDE_DIR}
  ${GLEW_INCLUDE_DIR}
  ${JPEG_INCLUDE_DIR}
  ${PNG_INCLUDE_DIR}
  ${LUA_INCLUDE_DIR}
  ${NPK_INCLUDE_DIR}
  ${SDL_INCLUDE_DIR}
  ${OPENAL_INCLUDE_DIR}
  ${TINYXML_INCLUDE_DIR}
  ${ZLIB_INCLUDE_DIR}
  ${FLTK_INCLUDE_DIR}
  ${RAKNET_INCLUDE_DIR}
)

SET(CMAKE_INSTALL_RPATH "@loader_path/.")
ADD_EXECUTABLE(neo-editor ${SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(neo-editor
  ## Maratis libraries
  ${MARATIS_COMMON_LIBRARIES}
  ${MCORE_LIBRARIES}
  ${MENGINE_LIBRARIES}

  ## 3rdparty libraries
  ${ASSIMP_LIBRARIES}
  ${BULLET_LIBRARIES}
  ${FREETYPE_LIBRARIES}
  ${GLEW_LIBRARIES}
  ${JPEG_LIBRARIES}
  ${PNG_LIBRARIES}
  ${VORBIS_LIBRARIES}
  ${OGG_LIBRARIES}
  ${LUA_LIBRARIES}
  ${NPK_LIBRARIES}
  ${SDL_LIBRARIES}
  ${TINYXML_LIBRARIES}
  ${OPENAL_LIBRARIES}
  ${ZLIB_LIBRARIES}
  ${FLTK_LIBRARIES}
  ${RAKNET_LIBRARIES}

  ## System libraries
  ${OPENGL_LIBRARIES}
  ${PLATFORM_LIBRARIES}
  ${NEO_IMAGEHELP}
)

INSTALL(TARGETS neo-editor DESTINATION ${MARATIS_INSTALL_DIR})
